@@ -1,3 +1,9 @@
+2014-10-17  Markus Trippelsdorf  <markus@trippelsdorf.de>
+
+	PR middle-end/61848
+	* g++.dg/torture/pr61848.C: New testcase.
+	* gcc.c-torture/compile/pr61848.c: New testcase.
+
 2014-10-16  Oleg Endo  <olegendo@gcc.gnu.org>
 
 	* gcc.target/sh/cmpstr.c: Fix excess failures caused by switch to GNU11.
